# hydraulic-robot-arm-pico

./: README.md
pico-position/: main.c
pico-position/msg_test/: ang_-30_-60_0  ang_0_-10_0  ang_0_0_0  spd_-1_-1_-1  spd_0_0_0  spd_1_1_1
pico-vector/: CMakeLists.txt  main.c
pico-vector/msg_test/: spd_-1_-1_-1  spd_0_0_0  spd_1_1_1  vec_-10_0_0  vec_0_0_0  vec_10_0_0
